# terraforming

./: .gitignore  Makefile  Mars Project.csv  Mars Project.xlsx  README.md  SESSION_HISTORY.md  data  install.sh  mkdocs.yml  pyproject.toml  pyrightconfig.json  requirements.txt
.claude/: settings.json
.claude/agents/: mars-researcher.md  principal-architect.md
.claude/rules/: documentation.md  testing.md
.github/: pull_request_template.md
.github/workflows/: auto-pr-researcher.yml  docs-deploy.yml  gcm3d.yml  tests.yml
Formula/: tform.rb
cli/: __init__.py  benchmark.py  benchmark_compare.py  config_loader.py  main.py  models.py  output.py  presets.py  pyproject.toml  runner.py  server.py
cli/configs/: current-mars.yaml  early-mars.yaml  elysium-mons.yaml  equatorial.yaml  gale-crater.yaml  hellas-basin.yaml  landmark-spots.yaml  olympus-mons.yaml  polar.yaml  south-polar-cap.yaml  terraforming-phase1.yaml
cli/static/: index.html
cli/static/assets/: index-BZgE-r66.js
cli/tests/: test_output.py
docs/: FUNCTIONS.md  IMPLEMENTATION.md  MEASUREMENT_REGISTER.md  OBJECTIVES.md  PLAN.md  index.md
docs/api/: celestials.md  engine.md  framework.md  interventions.md
docs/architecture/: batched-engine-performance.md  interventions.md  mars.md  planet.md  visualizer.md
docs/cli/: commands.md  presets.md
docs/getting-started/: installation.md  quickstart.md  what-is-tform.md
docs/ideas/: adr-language-framework-choice.md  amesgcm-comparison.md  benchmark.md  iclr2027-direction.md  (+8 more)
experiments/: planet.py  rems_loader.py  run_mars.py  utils.py
gpu_bench/: gpu.py
outputs/: mars_internal_structure_core_to_crust_summary.txt  mars_sol_evolution.csv  mars_south_pole_melt_flooded_lowlands_report.md  mars_wider_hellas_melt_fit_report.md  mars_year_evolution.csv
package/: pyproject.toml
package/scripts/: baseline_stability.py  mcd_pressure_comparison.py  mcd_validation.py
package/src/calibration/: __init__.py  baseline.py  harness.py  metrics.py  reference.py
package/src/celestials/planets/: mars.py
package/src/engine/: __init__.py  batched_controller.py  diagnostics.py  time_controller.py
package/src/framework/: atmosphere.py  orbital.py  planet.py  radiation.py  thermal.py  water.py
package/src/gcm3d/: __init__.py  _dinosaur.py  body.py  coordinates.py  dynamics.py  specs.py  terraforming_ode.py
package/src/interventions/: __init__.py  compounds.py  controller.py  forcing.py  magneticfield.py  state.py
package/tests/calibration/: test_baseline.py  test_harness.py  test_metrics.py  test_reference.py
package/tests/engine/: test_batched_controller.py  test_diagnostics.py
package/tests/gcm3d/: test_body.py  test_coordinates.py  test_dynamics.py  test_specs.py  test_terraforming_ode.py
package/tests/interventions/: test_compounds.py  test_controller.py  test_forcing.py  test_state.py
package/tests/mars/basic/: test_body_3d.py  test_gcm3d_core.py  test_ghg_gradients.py  test_planet_interface.py  test_pressure_budget.py  test_smooth_gates.py
package/tests/mars/time_controller/: test_daily.py  test_time_controller.py
resume/: nasa_mcmc_resume.tex
scripts/: create_crustal_magnetism_map_from_tif.py  create_crustal_magnetism_relief_composite.py  create_jupiter_seen_from_mars_local_data.py  create_mars_flooded_lowlands_map.py  create_mars_internal_structure_diagram.py  create_mars_main_characters_videoclip.py  create_mars_mantle_map_local_data.py  create_south_pole_melt_map.py  create_wider_hellas_melt_fit_map.py  download_marsis_optim.py  download_maven_euv_samples.py  download_maven_kp_api.py  download_msl_all_data.sh  find_marsis_polar_orbits.py  researcher-push.sh  test_fetch.py
src/: __init__.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
(+67 files in other folders)
