[project]
name = "terraforming"
version = "0.1.0"
description = "Mars terraforming physics framework — planets, atmospheres, orbital mechanics"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "torch>=2.10.0",
]

[project.optional-dependencies]
# Planet-agnostic differentiable 3-D GCM core (src/gcm3d), built on the NeuralGCM
# dinosaur dycore. JAX-based and OPTIONAL: the core package is torch-only and
# never imports src.gcm3d, so base installs and the Tests CI are unaffected.
#   pip install 'terraforming[gcm3d]'
gcm3d = [
    "dinosaur==1.3.6",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
